# autoconf-template-perl

./: .gitignore  ChangeLog  Makefile.am  Makefile.perl-req  README.md  README.md.in  autoconf-template-perl.spec.in  bootstrap  configure.ac  example-manifest.yaml  init.sh  perl-deps.yaml  perlcriticrc  requirements-core.txt  requirements.json
autotools/: ax_required_perl_modules.m4  ax_requirements_check.m4
config/: Makefile.am  example.cfg.in
cpan/: Makefile.am  README.md  buildspec.yml  extra-files  requires
includes/: apache-directories.inc  bash-bin.inc  directories.inc  perl-bin.inc  perl-build.inc  perl-cgi-bin.inc  perl-modules.inc  perl-modules.inc.sav  perlcritic.inc
resources/: Makefile.am  autoconf-template-perlrc  autoconf-template-perlrc.in  file_list.json  install-from-cpan.in  prove.sh.in  spec.in
resources/autotools/: ads_PERL_MODULE.m4  apache_config.m4  ax_perlcritic_severity.m4
src/main/perl/lib/: Foo.pm.in  Makefile.am
src/main/perl/lib/Autoconf/: Constants.pm.in  Template.pm.in  Utils.pm.in
src/main/perl/lib/Autoconf/Template/: Constants.pm.in  UnitTests.pm.in  Utils.pm.in
src/main/perl/lib/Foo/: Bar.pm.in
src/main/perl/lib/Foo/Bar/: Baz.pm.in  Buz.pm.in
src/main/perl/lib/t/: 00-foo.t
templates/: Makefile.am  Makefile.am.tt  Makefile.tt  README.md.tt  ax-extra-opts.m4.tt  build-rules.tt  configure.ac.tt  manifest.yaml.tt  manpage-rules.tt  spec.in.tt  stub.cgi.tt  stub.pl.tt  stub.pm.tt  unit-test.t.tt  unit-tests.tt
templates/config/: Makefile.am.tt
templates/html/: Makefile.am.tt
templates/perl/cgi-bin/: Makefile.am.tt  perl-cgi-bin.inc.tt
templates/perl/lib/: Makefile.am.tt  perl-modules.inc.tt
templates/resources/: Makefile.am.tt
utils/: find-perl-requires.sh  get-module-version.sh  init.pl  is-core.pl  perl-deps.pl  perl-deps.sh  rpm-sign.tcl
