resourcesdir = @datadir@/@PACKAGE@

RESOURCES = \
    COPYING \
    VERSION \
    autotools/ads_PERL_INCLUDES.m4 \
    autotools/ads_PERL_MODULE.m4 \
    autotools/ads_PROG_PERL.m4 \
    autotools/am_build_mode.m4 \
    autotools/am_perlcritic_mode.m4 \
    autotools/ax_am_conditional_example.m4 \
    autotools/ax_deps_check.m4 \
    autotools/ax_distcheck_hack.m4 \
    autotools/apache_config.m4 \
    autotools/ax_perlcritic_config.m4 \
    bootstrap \
    apache-directories.inc \
    directories.inc \
    file_list.json \
    gitignore \
    perlcritic.inc \
    perlcriticrc \
    perltidyrc \
    spec.in

resources_DATA = $(RESOURCES)

